platform/smartlab/06-ott-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smartlab-to-seaweedfs
  namespace: i3-ott
spec:
  podSelector:
    matchLabels:
      app: seaweedfs-s3-gw
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: i3-smartlab
      ports:
        - port: 8333
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smartlab-to-seaweedfs-filer
  namespace: i3-ott
spec:
  podSelector:
    matchLabels:
      app: seaweedfs-filer
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: i3-smartlab
      ports:
        - port: 8888
          protocol: TCP
        - port: 18888
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smartlab-to-directus
  namespace: i3-ott
spec:
  podSelector:
    matchLabels:
      app: directus
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: i3-smartlab
      ports:
        - port: 8055
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smartlab-to-n8n
  namespace: i3-ott
spec:
  podSelector:
    matchLabels:
      app: n8n
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: i3-smartlab
      ports:
        - port: 5678
          protocol: TCP
